@@ -44,8 +44,8 @@
       <default>false</default>
       <locale name="C">
         <short>Can Change Accels</short>
-        <long>Whether the user can dynamically type a new accelerator when a
-	menu is popped up</long>
+        <long>Whether the user can dynamically type a new accelerator when 
+	positioned over an active menuitem</long>
       </locale>
     </schema>
     <schema>
